--- a/css/forms.css
+++ b/css/forms.css
@@ -900,6 +900,8 @@ body.bodyModello .p_paz_screenshot:hover{ /* PAZIENTI */
 	/* background-image:url(../img/ico_etichetta.png) !important; */
 	background-image: none !important;
 	padding-left: 10px !important;
+	font-style:italic;
+	text-align:center !important;
 }
 .riga_modulo_d,
 .riga_modulo_e{
@@ -2036,7 +2038,68 @@ body:not(.touch) #puntiTrigger .dettPunto:hover{
 }
 
 
-
+#cerca_punto{
+	padding: 5px 8px 5px 15px;
+	text-align:center;
+}
+#cerca_punto input{
+	border-radius:16px !important;
+	background-color: rgba(0,0,0,0.1) !important;
+	text-align:center;
+	background-image: url(../img/lenteB.png) !important;
+	background-position: 5px center;
+    background-repeat: no-repeat;
+    background-size: auto 25px;
+}
+#elenco_punti{
+	position: absolute;
+    z-index: 10;
+    width: 100%;
+    height: 196px;
+    top: 75px;
+    background-color: #FFF;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    overflow-y: auto;
+}
+#elenco_punti:not(.vis){
+	display:none;
+}
+.punti_import{
+    display: block;
+    height: 32px;
+    line-height: 32px;
+	padding: 0 5px;
+	border-bottom:1px solid rgba(0,0,0,0.2);
+	overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.punti_import:hover{
+	background-color:rgba(0,0,0,0.05);
+}
+.punti_import span{
+    cursor: pointer;
+	display:block;
+	height: 27px;
+    line-height: 27px;
+	margin-top:2px;
+    border-radius: 5px;
+	background: -moz-linear-gradient(top, #1a4ba6 0%, #133f98 100%);
+	background: -webkit-linear-gradient(top, #1a4ba6 0%,#133f98 100%);
+	background: linear-gradient(to bottom, #1a4ba6 0%,#133f98 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a4ba6', endColorstr='#133f98',GradientType=0 );
+    color: #FFF;
+    padding-left: 8px;
+    padding-right: 8px;
+	display: inline-block;
+    text-align: center;
+	box-shadow: 0px 0px 2px #000;
+	float: right;
+}
+#elenco_punti .noResults{
+	padding-left:30px;
+}
 
 #gruppoPunti_cont{
     margin-top: -15px;
