--- a/css/popup_login.css
+++ b/css/popup_login.css
@@ -175,7 +175,9 @@ body:not(.smart) #login_benvenuto{
     z-index: 100;
     position: relative;
 }
-#visPwd{
+#visPwd,
+#visRecPwd,
+#visRecPwd2{
 	width:30px;
 	height:30px;
 	background-image: url(../img/visPwd.png);
@@ -190,7 +192,9 @@ body:not(.smart) #login_benvenuto{
     vertical-align: middle;
     width: 30px;
 }
-#visPwd.hide{
+#visPwd.hide,
+#visRecPwd.hide,
+#visRecPwd2.hide{
 	background-image: url(../img/visPwdHide.png) !important;
 }
 #loginStayConnected{
