--- a/css/popup_features.css
+++ b/css/popup_features.css
@@ -120,3 +120,18 @@
 #contFeatures > div > div:last-child{
 	width:calc(100% - 62px);
 }
+
+
+.tit_features{
+	font-size: var(--font-16-5);
+	line-height: 38px;
+}
+#features ul,
+#features ol{
+	padding-left: 24px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+#features li{
+	margin: 2px 0px !important;
+}
