Miglioramenti del layout di stampa

--- a/css/forms.css
+++ b/css/forms.css
@@ -1108,6 +1108,11 @@ cont_p_paz_label{
 	margin-right: 2px;
 	margin-left: 1px;
 }
+.tsb img.noMod{ /* PAZIENTI */
+	vertical-align: middle;
+	margin-top: -3px;
+	margin-left: 3px;
+}
 .grabed{
 	opacity: 0.5 !important;
 	background-color: rgba(92,173,243,0.5) !important;
@@ -1354,6 +1359,9 @@ cont_p_paz_label{
 	width: 100px;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+.contStampa #scheda:not(.sch_Max600) #formMod i:not(.tagDomanda) {
+	margin-bottom:0px !important;
 }
 #scheda:not(.sch_Max600) #formMod div:not(.labelSx) > i:not(.tagDomanda){  /* PAZIENTI */
     overflow: hidden;
@@ -1735,13 +1743,21 @@ body:not(.touch) #puntiTrigger .dettPunto:hover{
     border: none !important;
     padding-top: 7px;
 }
+.contStampa .rgMod select{
+	box-shadow:none !important;
+}
 .valPunto{
     border-left: 1px solid rgba(0,0,0,0.1);
 }
 .mezzoPunto{
 	margin-right:4px;
 }
-
+.contStampa .rgMod,
+.contStampa .rgProcMod{
+	border:none !important;
+	border-radius:0px !important;
+	box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.3) !important;
+}
 .valPunto img,
 .mezzoPunto img{
 	margin-top:-1px;
@@ -1843,6 +1859,9 @@ body:not(.touch) #puntiTrigger .dettPunto:hover{
 }
 .labelSx i{
 	display: inline-block !important;
+}
+.contStampa .labelSx input{
+	max-width: calc(100% - 105px) !important;
 }
 #formMod textarea{ /* PAZIENTI */
 	margin-left:0px !important;
@@ -2512,6 +2531,7 @@ body:not(.touch) .sezioneChiusa:hover{
 	border-bottom: none !important;
 	border-top: none !important;
 	box-shadow: 0 1px 0.5px rgba(0,0,0,0.4);
+	margin-bottom:20px !important;
 }
 .contStampa .sezioneTrattamenti > .labelTrattamenti{
 	background:none !important;
