--- a/sets/common/stili_procedure.css
+++ b/sets/common/stili_procedure.css
@@ -9,10 +9,10 @@
 #dettagliCont.TRP .dettPunto .iProc{
 	display:none !important;
 }
-.contStampa .rgProcMod {
+/* .contStampa .rgProcMod {
 	box-shadow:none !important;
 	border: none !important;
-}
+} */
 #procTue{
 	width:80px;
 }
